--- a/terraform/Jenkinsfile
+++ b/terraform/Jenkinsfile
@@ -16,8 +16,8 @@ pipeline {
         disableConcurrentBuilds()
     }
     parameters {
-        string(name: 'version' , defaultvalue: '' , description: 'what is artifact version')
-        string(name: 'environment' , defaultvalue: '' , description: 'what is the environment')
+        string(name: 'version' , defaultValue: '' , description: 'what is artifact version')
+        string(name: 'environment' , defaultValue: '' , description: 'what is the environment')
     }
     stages {
         stage("Getting the version of the file") {
