--- a/terraform/Jenkinsfile
+++ b/terraform/Jenkinsfile
@@ -29,13 +29,12 @@ pipeline {
                 """
             }
         }
-        stage('installing dependencies') {
+        stage('terraform init') {
             steps {
-                // Add npm steps here
+                // Add terraform init steps here
                 sh """
-                    echo installing npm dependencies 
-                    pwd
-                    npm install
+                    cd terraform
+                    terraform init --backend-config=${params.environment}/backend.tf -reconfigure
                     """ 
             }
         }
