--- a/terraform/Jenkinsfile
+++ b/terraform/Jenkinsfile
@@ -14,6 +14,9 @@ pipeline {
     options {
         timeout(time: 1 , unit: "HOURS")
         disableConcurrentBuilds()
+        ansiColor('xterm') {
+            sh "echo '\033[40m\033[37mThis text has a black background and white foreground\033[0m'"
+        }
     }
     parameters {
         string(name: 'version' , defaultValue: '' , description: 'what is artifact version')
