--- a/terraform/Jenkinsfile
+++ b/terraform/Jenkinsfile
@@ -17,8 +17,8 @@ pipeline {
         ansiColor('xterm') {
             script{
                 sh """  
-                    XTerm*Background: black
-                    XTerm*Foreground: white
+                    XTerm*Background: "black"
+                    XTerm*Foreground: "white"
                 """
             }
         }
