--- a/terraform/Jenkinsfile
+++ b/terraform/Jenkinsfile
@@ -36,7 +36,7 @@ pipeline {
                 // Add terraform init steps here
                 sh """
                     cd terraform
-                    terraform init --backend-config=${params.environment}/backend.tf -reconfigure
+                    terraform init --backend-config=${params.environment}/backend.tf -reconfigure 
                     """ 
             }
         }
@@ -45,7 +45,7 @@ pipeline {
                 // Add terraform plan steps here
                 sh """
                     cd terraform
-                    terraform plan -var-file=${params.environment}/${params.environment}.tfvars
+                    terraform plan -var-file=${params.environment}/${params.environment}.tfvars -var="app_version=${params.version}"
                     """ 
             }
         }
