--- a/terraform/Jenkinsfile
+++ b/terraform/Jenkinsfile
@@ -37,7 +37,7 @@ pipeline {
                 // Add terraform plan steps here
                 sh """
                     cd terraform
-                    terraform plan -var-file=${params.environment}/${params.environment}.tfvars -var="app_version=${params.packageVersion}"
+                    terraform plan -var-file="${params.environment}"/"${params.environment}".tfvars -var="app_version=${params.packageVersion}"
                     """ 
             }
         }
@@ -49,7 +49,7 @@ pipeline {
             }
             steps {
                 sh """
-                    terraform apply -var-file=${params.environment}/${params.environment}.tfvars -var="app_version=${params.packageVersion}" -auto-approve
+                    terraform apply -var-file="${params.environment}"/"${params.environment}".tfvars -var="app_version=${params.packageVersion}" -auto-approve
                 """
             }
         }
